@startuml CPP_NEW_ML_Interface

skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam class {
    BackgroundColor<<abstract>> LightYellow
    BorderColor Black
    ArrowColor Black
}


class "MLCoupling<In,Out>" <<abstract>> {
    - provider: std::unique_ptr<MLCouplingProvider<In,Out>>
    - application: std::unique_ptr<MLCouplingApplication<In,Out>>
    # input_data: std::shared_ptr<In>
    # output_data: std::shared_ptr<Out>
    + init(provider*, application*)
    + infer_ml_model()
    + finalize()
}

class "MLCouplingProvider<In,Out>" <<abstract>> {
    + init()
    + inference()
    + finalize()
}

class "MLCouplingApplication<In,Out>" <<abstract>> {
    - normalization: std::shared_ptr<MLCouplingNormalization<In,Out>>
    + init()
    + infer_ml_model()
    + finalize()
    + ml_step()
    # normalize_input(In&)
    # denormalize_output(Out&)
}

class "MLCouplingNormalization<In,Out>" <<abstract>> {
    + normalize_input(In&)
    + denormalize_output(Out&)
}

class "MLCouplingMinMaxNormalization<In,Out>" {
    - input_min_: In
    - input_max_: In
    - output_min_: Out
    - output_max_: Out
    + normalize_input(In&)
    + denormalize_output(Out&)
}

class "MLCouplingApplicationProperties" {
    + ~MLCouplingApplicationProperties()
    + supports_coupling_without_inference(): bool
    + supports_time_step_increase(): bool
}

class "MLCouplingBehavior" <<abstract>> {
    - properties: MLCouplingApplicationProperties*
    + MLCouplingBehavior(MLCouplingApplicationProperties*)
    + should_perform_inference(): bool
    + time_step_delta(): int
    + should_send_data(): bool
}

class "MLCouplingBehaviorDefault" {
    + should_perform_inference(): bool
    + time_step_delta(): int
    + should_send_data(): bool
}

class "MLCouplingBehaviorPeriodic" {
    - step_count: long long
    - inference_interval: int
    - coupled_steps_before_inference: int
    - coupled_steps_stride: int
    - step_increment_after_inference: int
    + should_perform_inference(): bool
    + time_step_delta(): int
    + should_send_data(): bool
}

' Relationships
"MLCoupling<In,Out>" "1" *-- "1" "MLCouplingProvider<In,Out>" : owns
"MLCoupling<In,Out>" "1" *-- "1" "MLCouplingApplication<In,Out>" : owns
"MLCouplingApplication<In,Out>" "1" o-- "0..1" "MLCouplingNormalization<In,Out>" : has (shared)
"MLCouplingMinMaxNormalization<In,Out>" --|> "MLCouplingNormalization<In,Out>"

"MLCouplingApplication<In,Out>" --|> "MLCouplingApplicationProperties"
"MLCouplingBehavior" ..> "MLCouplingApplicationProperties" : uses
"MLCouplingBehaviorDefault" --|> "MLCouplingBehavior"
"MLCouplingBehaviorPeriodic" --|> "MLCouplingBehavior"

@enduml